recreate a branch for ANDROIDAPP-562, SuppressWarnings